--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,8 @@
 
   --color-primary-shadow: var(--primary-shadow);
   --color-primary-hover: var(--primary-hover);
+  --color-label: var(--label);
+  --color-border: var(--border);
 }
 
 :root {
@@ -156,16 +158,18 @@
   --chart-4: 187 85% 53%; /* cyan-500 */
   --chart-5: 0 0% 80%; /* tùy chọn cho "Other" */
   --sidebar: var(--background);
-  --sidebar-foreground: oklch(0.141 0.005 285.823);
+  --sidebar-foreground: #6e6b7b;
   --sidebar-primary: oklch(0.21 0.006 285.885);
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: var(--primary);
-  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
+  --sidebar-accent-foreground: #fff;
   --sidebar-border: oklch(0.92 0.004 286.32);
-  --sidebar-ring: oklch(0.705 0.015 286.067);
+  --sidebar-ring: #248f55;
 
   --primary-shadow: 0 8px 25px -8px #248f55;
   --primary-hover: #1f7b49;
+  --label: #6e6b7b;
+  --borer: #00000026;
 }
 
 .dark {
@@ -193,16 +197,18 @@
   --chart-4: 187 85% 53%; /* cyan-500 */
   --chart-5: 0 0% 80%; /* tùy chọn cho "Other" */
   --sidebar: var(--background);
-  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-foreground: #f8f8f2;
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: var(--primary);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-accent-foreground: #f8f8f2;
   --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.552 0.016 285.938);
+  --sidebar-ring: #248f55;
 
   --primary-shadow: 0 8px 25px -8px #248f55;
   --primary-hover: #1f7b49;
+  --label: #6e6b7b;
+  --borer: #00000026;
 }
 
 @layer base {
