update(buildings): update customize table

--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,7 @@
   --primary-foreground: oklch(0.985 0 0);
   --secondary: #ebebec;
   --secondary-foreground: oklch(0.21 0.006 285.885);
-  --muted: oklch(0.967 0.001 286.375);
+  --muted: oklch(92.854% 0.00278 285.783);
   --muted-foreground: oklch(0.552 0.016 285.938);
   --accent: oklch(0.967 0.001 286.375);
   --accent-foreground: oklch(0.21 0.006 285.885);
@@ -182,7 +182,7 @@
   --primary-foreground: oklch(0.21 0.006 285.885);
   --secondary: #44475a;
   --secondary-foreground: #fff;
-  --muted: oklch(0.274 0.006 286.033);
+  --muted: oklch(35.583% 0.0155 285.557);
   --muted-foreground: oklch(0.705 0.015 286.067);
   --accent: oklch(0.274 0.006 286.033);
   --accent-foreground: oklch(0.985 0 0);
