feat(building): add API create a new building

--- a/src/index.css
+++ b/src/index.css
@@ -244,3 +244,10 @@
     @apply bg-border rounded-full;
   }
 }
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0px 1000px theme("colors.background") inset !important;
+  -webkit-box-shadow: 0 0 0px 1000px theme("colors.background") inset !important;
+  -webkit-text-fill-color: theme("colors.foreground") !important;
+  transition: background-color 9999s ease-in-out 0s;
+}
