--- a/src/index.css
+++ b/src/index.css
@@ -261,8 +261,8 @@ input:-webkit-autofill {
 }
 
 .editor-container_classic-editor .editor-container__editor {
-  min-width: 795px;
-  max-width: 795px;
+  min-width: 100%;
+  max-width: 100%;
 }
 
 .ck-content {
